- Fixed the issue for sending voice message on iphone

--- a/app/assets/stylesheets/custom/chat.scss
+++ b/app/assets/stylesheets/custom/chat.scss
@@ -252,6 +252,7 @@ html[dir="rtl"] {
   border: 0 dashed;
   border-bottom-width: 1px;
   margin-bottom: 10px;
+  padding-bottom: 3px;
 }
 
 .nv-message-board-header .nv-go-detail {
